# data_analytics_executives

./: .gitignore  03_nyc_taxi_duckdb_maps.ipynb  README.md  main.py  pyproject.toml  repo_description.md
data/: bottling_lines.csv  gss_extract_2022.csv  london_bikes.csv  london_bikes111.csv  smoking_birth_weight.csv  student_survey.csv  uber_surge.csv
group_project/: group_project_folder_description.md  london_bikes.ipynb
session 1/: 00_carbon_emissions.ipynb  02_binomial_simulation.ipynb  05_bootstrap_analysis.ipynb  06_bottling_lines.ipynb  07_bootstrap_function.py  90_uk_polls_scraping.ipynb
session 2/: 01_global_warming.ipynb  03_credit_balance_analysis.ipynb  05_stock_returns.ipynb
session 3/: 01_uber_surge_analysis.ipynb  02_world_happiness.ipynb  03_capm_aapl_beta.ipynb  04_sp500_beta_analysis.ipynb  Concept_Check_2_Winner.ipynb
session 4/: 01_smoking_birth_weight.ipynb  02_height_earnings.ipynb  03_credit_linear_models.ipynb
session01/: 00_session01_description.md  01_dice_simulation.ipynb  02_binomial_simulation.ipynb  03_admissions_normal_distribution.ipynb  04_admissions_normal_distribution.ipynb  04_binomial_CI.py  04_movie_ratings_analysis.ipynb  05_bootstrap_analysis.ipynb  05_movie_ratings_analysis.ipynb  06_bootstrap_function.py  06_bottling_lines.ipynb  90_uk_polls_scraping.ipynb  91_carbon_emissions.ipynb  91_commodities.ipynb  92_commodities.ipynb
session02/: 00_session02_description.md  01_global_warming.ipynb  02_uber_ab_test.ipynb  03_credit_balance_analysis.ipynb  04_student_survey_analysis.ipynb  05_stock_returns.ipynb
session03/: 00_nyc_uber_lyft_maps.ipynb  00_session03_description.md  01_uber_surge_analysis.ipynb  02_world_happiness.ipynb  03_aapl_capm.ipynb  04_sp500_CAPM.ipynb  05_Fama_French.ipynb  Concept_Check_2.html  Concept_Check_2.ipynb
session04/: 00_session04_description.md  01_smoking_birth_weight.ipynb  02_height_earnings.ipynb  03_credit_linear_models.ipynb
