[project]
name = "data-analytics-executives"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=6.0",
    "duckdb>=1.5.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pandas-datareader>=0.10.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "squarify>=0.4.4",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]
